Fix bug where update banner would cause page to overflow

--- a/app/styles/_update-notification.scss
+++ b/app/styles/_update-notification.scss
@@ -6,6 +6,7 @@
   z-index: 1000;
   width: 100%;
   padding: 10px 15px;
+  box-sizing: border-box;
   background-color: $control-background-color-active;
   transform: translateY(-100%);
   transition: transform 400ms ease-in-out;
